GNOME Bugzilla – Bug 789052
omx: fix build on rpi
Last modified: 2017-10-19 14:24:31 UTC
.
Created attachment 361666 [details] [review] omx: fix build on rpi The nTimeStamp field is a OMX_TICKS struct on the rpi so use the proper macro to set it. Fix build on the build which has been broken by b3173144b7c1b12c9e1b7571f78659be45d813f6
Attachment 361666 [details] pushed as 6d44c0a - omx: fix build on rpi