omx: fix build on rpi

The nTimeStamp field is a OMX_TICKS struct on the rpi so use the proper
macro to set it.
Fix build on the build which has been broken by
b3173144b7c1b12c9e1b7571f78659be45d813f6

https://bugzilla.gnome.org/show_bug.cgi?id=789052